# ps1-ai-player

./: .env.example  .gitignore  CLAUDE.md  README.md  action_recommender.py  address_manager.py  ai_agent.py  alert_notifier.py  anomaly_detector.py  batch_report.py  cross_session_analyzer.py  dashboard.py  data_analyzer.py  demo_run.py  game_prototype.py  gdd_generator.py  log_config.py  lua_generator.py  lua_logger_template.lua  memory_logger.py  memory_scanner.py  memory_watcher.py  parameter_predictor.py  pipeline.py  preflight_check.py  pyproject.toml  replay_diff.py  requirements.txt  run.sh  session_benchmark.py  session_exporter.py  session_group.py  session_replay.py  session_scorer.py  session_search.py  session_tagger.py  setup.sh  setup_duckstation.py  strategy_optimizer.py  visualizer.py
DOCS/: E2E_GUIDE.md  STRATEGY_GUIDE.md
addresses/: SLUS-00170.json  SLUS-00402.json
reports/: demo_causal_chains.json
sample_data/: DEMO.json  README.md  action_sample_log.csv  fighting_sample_log.csv  generate_action_sample.py  generate_fighting_sample.py  generate_rpg_sample.py  generate_sample.py  generate_survival_horror_sample.py  rpg_sample_log.csv  sample_log.csv  survival_horror_sample_log.csv
tests/: conftest.py  test_action_recommender.py  test_address_manager.py  test_agent_components.py  test_ai_agent_runtime.py  test_alert_notifier.py  test_anomaly_detector.py  test_batch_report.py  test_cross_session_analyzer.py  test_dashboard.py  test_data_analyzer.py  test_demo_run.py  test_dotenv_loading.py  test_game_prototype.py  test_gdd_generator.py  (+17 more)
(+11 files in other folders)
