[project]
name = "ps1-ai-player"
version = "0.1.0"
description = "Autonomous PS1 game player with AI-driven logic extraction and GDD generation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "mss>=9.0.1",
    "pynput>=1.7.6",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "Pillow>=10.2.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
